-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Wed, Nov 4, 2009
---------------------------------------------------------------------
- Correctly set opportunity campaign and source when converting a lead (LH #119).
- Show correct campaign name and source when adding a lead from campaign landing page.

Sat, Oct 31, 2009
---------------------------------------------------------------------
- Correctly show opportunity summary when opportunity stage hasn't been specified.
- Update Campaign summary when creating or deleting related lead or opportunity.
- Fixed "rake crm:setup" task to be compatible with ruby 1.9.

Fri, Oct 30, 2009
---------------------------------------------------------------------
- Introduced Sortable module, more work on I18n.

Sat, Oct 24, 2009
---------------------------------------------------------------------
- Allow renaming both main and admin tabs (see config/settings.yml).
- Refactored gravatars to always show default image if gravatar is missing.
- Fixed Facebox usage within Admin area.
- Release 0.9.8a.

Thu, Oct 22, 2009
---------------------------------------------------------------------
- Fixed SASS deprecation warnings making it compatible with Heroku again (thanks, Jim!).
- Refactored Facebox library (again!) to take into account [base_url] setting.

Wed, Oct 21, 2009
---------------------------------------------------------------------
- Include modules from "lib/fat_free_crm.rb" so that they're loaded when running rake.

Tue, Oct 20, 2009
---------------------------------------------------------------------
- Added Language option stubs to user's profile.
- Disabled tab highlighting when showing user's profile.

Sun, Oct 18, 2009
---------------------------------------------------------------------
- Merged localization commits onto i18n branch (thanks, Lana!)

Wed, Oct 14, 2009
---------------------------------------------------------------------