@@ -117,6 +117,7 @@ class LeadsController < ApplicationController
   #----------------------------------------------------------------------------
   def update
     @lead = Lead.my(@current_user).find(params[:id])
+    @campaign = @lead.campaign.dup if @lead.campaign && !called_from_index_page?
 
     respond_to do |format|
       if @lead.update_with_permissions(params[:lead], params[:users])
